@@ -127,12 +127,12 @@ for my $control ($header, @binary_controls) {
 		$value =~ s/\[[^\]]*\]//g;
 		if ($value =~ /(?:^|\s)
 			       (
-				(?:\w[^\s,|\(]+|\$\{\S+\})\s*
+				(?:\w[^\s,|\$\(]+|\$\{\S+:Depends\})\s*
 				(?:\([^\)]*\)\s*)?
 			       )
 			       \s+
 			       (
-				(?:\w[^\s,|\(]+|\$\{\S+\})\s*
+				(?:\w[^\s,|\$\(]+|\$\{\S+:Depends\})\s*
 				(?:\([^\)]*\)\s*)?
 			       )/x) {
 			my ($prev, $next) = ($1, $2);
